# My-Grind-for-NHK2025

rogilink_flex_shoot/: package.xml  setup.cfg  setup.py
rogilink_flex_shoot/rogilink_flex_shoot/: rogilink_flex_shoot.py
shoot/: CMakeCache.txt  CMakeLists.txt  README.md  package.xml
shoot/src/: Dif_Everything.hpp  rogilink_flex.py  shoot.cpp
shoot/src/rogidrive/rogidrive/config/: r1.json
shoot/src/shoot/: shoot.cpp
