<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rogilink_flex_shoot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yuki060328@keio.jp">yuki</maintainer>
  <license>Apache License 2.0</license>

<exec_depend>rclpy</exec_depend>
<exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
